--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>My project</h1>
+  <h1>Header 123</h1>
   <main>Main</main>
   <ul>
     <li>red</li>
